[gd_scene load_steps=11 format=3 uid="uid://ccx2helx5hgs2"]

[ext_resource type="Texture2D" uid="uid://dlg1xdlo764kv" path="res://server/server.png" id="2_er2ig"]
[ext_resource type="PackedScene" uid="uid://bjvhbfrv0kbow" path="res://robot/components/damage/health/health_manager/health_manager_comp.tscn" id="2_g1lh6"]
[ext_resource type="PackedScene" uid="uid://dw7r3dxftykog" path="res://robot/components/damage/health/health_comp.tscn" id="3_g1lh6"]
[ext_resource type="Script" uid="uid://c14eqqxrap2sd" path="res://server/server_death_comp.gd" id="4_gc6nq"]
[ext_resource type="PackedScene" uid="uid://w4ost6rfsmwv" path="res://robot/components/comp_base.tscn" id="5_cl8lc"]
[ext_resource type="Script" uid="uid://b4ymga6s5rt64" path="res://server/spawn_area_comp.gd" id="6_t43u5"]
[ext_resource type="Texture2D" uid="uid://dnvm0j05udesl" path="res://server/outline.png" id="7_87v45"]
[ext_resource type="PackedScene" uid="uid://cm06qa2uebv75" path="res://robot/components/damage/hurtbox/hurtbox_comp.tscn" id="8_it51r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_st8xy"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_87v45"]
radius = 128.0

[node name="Server" type="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_st8xy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_er2ig")

[node name="HealthHandlerComp" parent="." instance=ExtResource("2_g1lh6")]

[node name="HealthComp" parent="." instance=ExtResource("3_g1lh6")]

[node name="ServerDeathComp" type="Node" parent="." groups=["component"]]
script = ExtResource("4_gc6nq")

[node name="CompBase" parent="ServerDeathComp" instance=ExtResource("5_cl8lc")]

[node name="SpawnAreaComp" type="Area2D" parent="." groups=["component"]]
collision_layer = 16
collision_mask = 0
script = ExtResource("6_t43u5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnAreaComp"]
shape = SubResource("CircleShape2D_87v45")

[node name="Sprite2D" type="Sprite2D" parent="SpawnAreaComp"]
texture = ExtResource("7_87v45")

[node name="HurtboxComp" parent="." instance=ExtResource("8_it51r")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComp"]
shape = SubResource("CircleShape2D_st8xy")

[connection signal="input_event" from="SpawnAreaComp" to="SpawnAreaComp" method="_on_input_event"]
